# RTGame

./: .gitignore  .gitmodules  CMakeLists.txt
Game/: CMakeLists.txt
Game/assets/: invader.txt  spaceship.txt
Game/src/: main.cpp
RTEngine/: CMakeLists.txt
RTEngine/src/Behaviour/: Behaviour.h
RTEngine/src/Core/: CommonDef.h  Input.h
RTEngine/src/Platform/Windows/: WinInput.cpp  WinRend.cpp  WinRend.h
RTEngine/src/Renderer/: RChar.h  Renderer.cpp  Renderer.h  Sprite.h
RTEngine/src/Scene/: Components.h  Entity.h  IComponent.h  Scene.cpp  Scene.h  Sprite.h
RTEngine/src/Utils/: Utils.cpp  Utils.h
